[project]
name = "test-ComfyUI-dummy"
description = "some test project"
version = "v1.2.3"
authors = [
  {name = "Lex Darlog"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = []

[project.urls]
Repository = "https://github.com/Lex-DRL/test-ComfyUI-dummy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lex-drl"
DisplayName = "Best Resolution"
Icon = ""
